--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -9,7 +9,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path="../Exports/bag-of-bones/Bag of Bones.exe"
+export_path="../Exports/bag-of-bones/bag-of-bones-win-x84_64/Bag of Bones.exe"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -35,8 +35,8 @@ codesign/digest_algorithm=1
 codesign/description=""
 codesign/custom_options=PackedStringArray()
 application/modify_resources=true
-application/icon=""
-application/console_wrapper_icon=""
+application/icon="uid://d3rpwpxkpix6w"
+application/console_wrapper_icon="uid://d3rpwpxkpix6w"
 application/icon_interpolation=4
 application/file_version=""
 application/product_version=""
@@ -80,7 +80,7 @@ custom_features=""
 export_filter="all_resources"
 include_filter=""
 exclude_filter=""
-export_path=""
+export_path="../Exports/bag-of-bones/bag-of-bones-macOS/Bag of Bones.zip"
 patches=PackedStringArray()
 encryption_include_filters=""
 encryption_exclude_filters=""
@@ -96,7 +96,7 @@ binary_format/architecture="universal"
 custom_template/debug=""
 custom_template/release=""
 debug/export_console_wrapper=1
-application/icon=""
+application/icon="uid://d3rpwpxkpix6w"
 application/icon_interpolation=4
 application/bundle_identifier="com.veranovus.bag-of-bones"
 application/signature=""
